fixed overflow issue caused by main wrapper

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,7 +12,7 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-
+  overflow: hidden;
 }
 
 .headerText {
